--- a/index.html
+++ b/index.html
@@ -4,85 +4,109 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Snapbite™ Menu</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 2rem 1rem;
       background: #fffaf4;
-      color: #333;
+      color: #2c2c2c;
       max-width: 800px;
       margin-inline: auto;
     }
+
     h1 {
       text-align: center;
-      color: #ff4f00;
-      font-size: 2.2rem;
-      margin-bottom: 1rem;
+      font-family: 'Poppins', sans-serif;
+      color: #d35400;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
     }
+
     h2 {
       color: #333;
-      border-left: 6px solid #ff4f00;
-      padding-left: 0.5rem;
+      border-left: 5px solid #d35400;
+      padding-left: 0.6rem;
       margin-top: 2.5rem;
+      font-family: 'Poppins', sans-serif;
+      font-weight: 600;
     }
+
     .tagline {
       font-size: 0.95rem;
-      color: #666;
+      color: #777;
       margin-bottom: 1rem;
-      padding-left: 0.5rem;
+      padding-left: 0.6rem;
     }
+
     .item {
-      background: #fff;
-      border: 1px solid #ffe1cc;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 6px rgba(255, 79, 0, 0.08);
+      background: #fffdf9;
+      border: 1px solid #f2d1b3;
+      border-radius: 14px;
+      padding: 1.2rem 1rem;
+      margin-bottom: 1.2rem;
+      box-shadow: 0 4px 12px rgba(211, 84, 0, 0.07);
+      transition: transform 0.2s ease;
     }
+
+    .item:hover {
+      transform: scale(1.01);
+    }
+
     .item-name {
-      font-weight: bold;
+      font-weight: 600;
       font-size: 1.1rem;
       color: #222;
     }
+
     .item-price {
       float: right;
-      color: #ff4f00;
-      font-weight: bold;
+      color: #d35400;
+      font-weight: 600;
     }
+
     .item-desc {
       font-size: 0.95rem;
-      margin-top: 0.3rem;
+      margin-top: 0.4rem;
       color: #555;
+      clear: both;
     }
+
     .order-wrap {
       text-align: center;
-      margin-top: 3rem;
+      margin-top: 4rem;
     }
+
     .order-btn {
-      background: #ff4f00;
+      background: linear-gradient(to right, #ff6f00, #ff3c00);
       color: white;
-      padding: 0.8rem 1.5rem;
-      font-size: 1rem;
+      padding: 0.9rem 2.2rem;
+      font-size: 1.1rem;
+      font-weight: 500;
+      font-family: 'Poppins', sans-serif;
       border: none;
       border-radius: 30px;
       text-decoration: none;
-      box-shadow: 0 4px 10px rgba(255, 79, 0, 0.2);
-      transition: 0.3s ease;
+      box-shadow: 0 4px 14px rgba(255, 79, 0, 0.3);
+      transition: all 0.3s ease;
     }
+
     .order-btn:hover {
-      background: #e64a00;
+      background: linear-gradient(to right, #e65c00, #cc2b00);
+      box-shadow: 0 6px 18px rgba(255, 79, 0, 0.35);
     }
   </style>
 </head>
 <body>
+
   <h1>Snapbite™ Menu</h1>
 
-  <!-- Burger Series -->
+
   <h2>🍔 Burger Series</h2>
   <div class="tagline">Honest burgers made fresh with 140gm craft beef or crispy chicken.</div>
 
-  <!-- Beef -->
+  
   <div class="item"><span class="item-name">Beef Burger</span><span class="item-price">RM10</span>
     <div class="item-desc">Juicy 140gm beef patty with lettuce, pickles & Zesty Sauce.</div>
   </div>
@@ -96,7 +120,7 @@
     <div class="item-desc">Beef patty stacked with bacon, egg, cheese & Zesty Sauce.</div>
   </div>
 
-  <!-- Chicken -->
+
   <div class="item"><span class="item-name">Original Crispy</span><span class="item-price">RM8</span>
     <div class="item-desc">Crispy chicken thigh with lettuce & House Cream.</div>
   </div>
@@ -110,7 +134,6 @@
     <div class="item-desc">Crispy chicken with bacon, cheese & House Cream.</div>
   </div>
 
-  <!-- Tex-Mex Series -->
   <h2>🌮 Tex-Mex Series</h2>
   <div class="tagline">All served with Snapbite™ Zesty Sauce. Choose soft (1 pc) or hard taco (2 pcs).</div>
 
@@ -133,7 +156,6 @@
     <div class="item-desc">Half beef, half chicken with mozzarella inside grilled tortilla.</div>
   </div>
 
-  <!-- Pasta Series -->
   <h2>🍝 Pasta Series</h2>
   <div class="tagline">Comfort bowls for every kind of craving.</div>
 
@@ -150,7 +172,6 @@
     <div class="item-desc">White sauce pasta topped with popcorn chicken.</div>
   </div>
 
-  <!-- Snack Series -->
   <h2>🍟 Snack Series</h2>
   <div class="tagline">Best served hot – great for sharing or solo cravings.</div>
 
@@ -164,9 +185,9 @@
     <div class="item-desc">Fries topped with beef bolognese sauce and melted cheese.</div>
   </div>
 
-  <!-- ORDER BUTTON -->
   <div class="order-wrap">
     <a id="orderBtn" href="https://abgspekfoodie.github.io/Snapbite-Order/" class="order-btn">ORDER NOW</a>
   </div>
+
 </body>
 </html>
