--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
+      background: #121212;
+      color: #f4f4f4;
       margin: 0;
       padding: 2rem 1rem;
-      background: #fffaf4;
-      color: #2c2c2c;
       max-width: 800px;
       margin-inline: auto;
     }
@@ -19,14 +19,14 @@
     h1 {
       text-align: center;
       font-family: 'Poppins', sans-serif;
-      color: #d35400;
+      color: #ff6f00;
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
     }
 
     h2 {
-      color: #333;
-      border-left: 5px solid #d35400;
+      color: #f0f0f0;
+      border-left: 5px solid #ff6f00;
       padding-left: 0.6rem;
       margin-top: 2.5rem;
       font-family: 'Poppins', sans-serif;
@@ -35,18 +35,18 @@
 
     .tagline {
       font-size: 0.95rem;
-      color: #777;
+      color: #bbbbbb;
       margin-bottom: 1rem;
       padding-left: 0.6rem;
     }
 
     .item {
-      background: #fffdf9;
-      border: 1px solid #f2d1b3;
+      background: #1e1e1e;
+      border: 1px solid #2a2a2a;
       border-radius: 14px;
       padding: 1.2rem 1rem;
       margin-bottom: 1.2rem;
-      box-shadow: 0 4px 12px rgba(211, 84, 0, 0.07);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
       transition: transform 0.2s ease;
     }
 
@@ -57,19 +57,19 @@
     .item-name {
       font-weight: 600;
       font-size: 1.1rem;
-      color: #222;
+      color: #ffffff;
     }
 
     .item-price {
       float: right;
-      color: #d35400;
+      color: #ff6f00;
       font-weight: 600;
     }
 
     .item-desc {
       font-size: 0.95rem;
       margin-top: 0.4rem;
-      color: #555;
+      color: #cccccc;
       clear: both;
     }
 
@@ -145,7 +145,6 @@
   <h2>🍔 Burger Series</h2>
   <div class="tagline">Honest burgers made fresh with 140gm craft beef or crispy chicken.</div>
 
-  <!-- Beef -->
   <div class="item"><span class="item-name">Beef Burger</span><span class="item-price">RM10</span>
     <div class="item-desc">Juicy 140gm beef patty with lettuce, pickles & Zesty Sauce.</div>
   </div>
@@ -159,7 +158,6 @@
     <div class="item-desc">Beef patty stacked with bacon, egg, cheese & Zesty Sauce.</div>
   </div>
 
-  <!-- Chicken -->
   <div class="item"><span class="item-name">Original Crispy</span><span class="item-price">RM8</span>
     <div class="item-desc">Crispy chicken thigh with lettuce & House Cream.</div>
   </div>
@@ -240,7 +238,6 @@
       e.preventDefault();
       const emojiRun = document.getElementById("emojiRun");
       emojiRun.classList.add("active");
-
       setTimeout(() => {
         window.location.href = this.href;
       }, 2000);
