--- a/index.html
+++ b/index.html
@@ -1,223 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Snapbite™ Menu</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      background: #121212;
-      color: #f4f4f4;
-      margin: 0;
-      padding: 2rem 1rem;
-      max-width: 800px;
-      margin-inline: auto;
-    }
-
-    h1 {
-      text-align: center;
-      font-family: 'Poppins', sans-serif;
-      color: #ff6f00;
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-
-    h2 {
-      color: #f0f0f0;
-      border-left: 5px solid #ff6f00;
-      padding-left: 0.6rem;
-      margin-top: 2.5rem;
-      font-family: 'Poppins', sans-serif;
-      font-weight: 600;
-    }
-
-    .tagline {
-      font-size: 0.95rem;
-      color: #bbbbbb;
-      margin-bottom: 1rem;
-      padding-left: 0.6rem;
-    }
-
-    .item {
-      background: #1e1e1e;
-      border: 1px solid #2a2a2a;
-      border-radius: 14px;
-      padding: 1.2rem 1rem;
-      margin-bottom: 1.2rem;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
-      transition: transform 0.2s ease;
-    }
-
-    .item:hover {
-      transform: scale(1.01);
-    }
-
-    .item-name {
-      font-weight: 600;
-      font-size: 1.1rem;
-      color: #ffffff;
-    }
-
-    .item-price {
-      float: right;
-      color: #ff6f00;
-      font-weight: 600;
-    }
-
-    .item-desc {
-      font-size: 0.95rem;
-      margin-top: 0.4rem;
-      color: #cccccc;
-      clear: both;
-    }
-
-    .order-wrap {
-      text-align: center;
-      margin-top: 4rem;
-    }
-
-    .order-btn {
-      background: linear-gradient(to right, #ff6f00, #ff3c00);
-      color: white;
-      padding: 0.9rem 2.2rem;
-      font-size: 1.1rem;
-      font-weight: 500;
-      font-family: 'Poppins', sans-serif;
-      border: none;
-      border-radius: 30px;
-      text-decoration: none;
-      box-shadow: 0 4px 14px rgba(255, 79, 0, 0.3);
-      transition: all 0.3s ease;
-    }
-
-    .order-btn:hover {
-      background: linear-gradient(to right, #e65c00, #cc2b00);
-      box-shadow: 0 6px 18px rgba(255, 79, 0, 0.35);
-    }
-
-    .emoji-run {
-      margin-top: 1.5rem;
-      font-size: 2rem;
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 0.3s ease, transform 0.3s ease;
-    }
-
-    .emoji-run.active {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    /* Overlay */
-    .overlay-dim {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: 9999;
-      display: none;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-    }
-
-    .overlay-dim.show {
-      display: flex;
-    }
-
-    .loader-emoji {
-      font-size: 3rem;
-      display: flex;
-      gap: 1rem;
-    }
-
-    .loader-emoji span {
-      animation: dance 0.6s ease-in-out infinite alternate;
-      display: inline-block;
-    }
-
-    .loader-emoji span:nth-child(1) {
-      animation-delay: 0s;
-    }
-
-    .loader-emoji span:nth-child(2) {
-      animation-delay: 0.15s;
-    }
-
-    .loader-emoji span:nth-child(3) {
-      animation-delay: 0.3s;
-    }
-
-    @keyframes dance {
-      0%   { transform: translateY(0) rotate(0deg); }
-      100% { transform: translateY(-10px) rotate(-10deg); }
-    }
-
-    .overlay-dim .text {
-      color: #ff6f00;
-      font-size: 1.2rem;
-      margin-top: 1rem;
-      font-family: 'Poppins', sans-serif;
-      animation: fadeIn 1s ease-in-out infinite alternate;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0.4; }
-      to { opacity: 1; }
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<title>Snapbite™ Menu</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Poppins:wght@600&display=swap" rel="stylesheet">
+<style>
+  body {
+    font-family: 'Inter', sans-serif;
+    background: #121212;
+    color: #f4f4f4;
+    margin: 0;
+    padding: 2rem 1rem;
+    max-width: 800px;
+    margin-inline: auto;
+  }
+  h1 {
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+    color: #ff6f00;
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
+  h2 {
+    color: #f0f0f0;
+    border-left: 5px solid #ff6f00;
+    padding-left: 0.6rem;
+    margin-top: 2.5rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+  }
+  .tagline {
+    font-size: 0.95rem;
+    color: #bbbbbb;
+    margin-bottom: 1rem;
+    padding-left: 0.6rem;
+  }
+  .item {
+    background: #1e1e1e;
+    border: 1px solid #2a2a2a;
+    border-radius: 14px;
+    margin-bottom: 1.2rem;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.6);
+    transition: transform 0.2s ease;
+    padding: 1rem 1rem 1.2rem;
+  }
+  .item:hover {
+    transform: scale(1.01);
+  }
+  .item-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+  }
+  .item-name {
+    font-weight: 600;
+    font-size: 1.1rem;
+    color: #ffffff;
+  }
+  .item-price {
+    color: #ff6f00;
+    font-weight: 600;
+  }
+  .item-desc {
+    font-size: 0.95rem;
+    margin-top: 0.4rem;
+    color: #cccccc;
+  }
+  .order-wrap {
+    text-align: center;
+    margin-top: 4rem;
+  }
+  .order-btn {
+    background: linear-gradient(to right, #ff6f00, #ff3c00);
+    color: white;
+    padding: 0.9rem 2.2rem;
+    font-size: 1.1rem;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    border: none;
+    border-radius: 30px;
+    text-decoration: none;
+    box-shadow: 0 4px 14px rgba(255,79,0,0.3);
+    transition: all 0.3s ease;
+  }
+  .order-btn:hover {
+    background: linear-gradient(to right, #e65c00, #cc2b00);
+    box-shadow: 0 6px 18px rgba(255,79,0,0.35);
+  }
+  .emoji-run {
+    margin-top: 1rem;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.3s ease, transform 0.3s ease;
+  }
+  .emoji-run.active {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  .overlay-dim {
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.7);
+    z-index: 9999;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .overlay-dim.show {
+    display: flex;
+  }
+  .loader-emoji {
+    font-size: 3rem;
+    display: flex;
+    gap: 1rem;
+  }
+  .loader-emoji span {
+    animation: dance 0.6s ease-in-out infinite alternate;
+    display: inline-block;
+  }
+  .loader-emoji span:nth-child(1) { animation-delay: 0s; }
+  .loader-emoji span:nth-child(2) { animation-delay: 0.15s; }
+  .loader-emoji span:nth-child(3) { animation-delay: 0.3s; }
+  @keyframes dance {
+    0%   { transform: translateY(0) rotate(0deg); }
+    100% { transform: translateY(-10px) rotate(-10deg); }
+  }
+  .overlay-dim .text {
+    color: #ff6f00;
+    font-size: 1.2rem;
+    margin-top: 1rem;
+    font-family: 'Poppins', sans-serif;
+    animation: fadeIn 1s ease-in-out infinite alternate;
+  }
+  @keyframes fadeIn {
+    from { opacity: 0.4; }
+    to { opacity: 1; }
+  }
+</style>
 </head>
 <body>
 
-  <h1>Snapbite™ Menu</h1>
+<h1>Snapbite™ Menu</h1>
 
-  <!-- Burger Series -->
-  <h2>🍔 Burger Series</h2>
-  <div class="tagline">Honest burgers made fresh with 140gm craft beef or crispy chicken.</div>
+<h2>🍔 Burger Series</h2>
+<div class="tagline">140gm craft beef or crispy chicken, freshly made.</div>
+<div class="item"><div class="item-header"><span class="item-name">Beef Burger</span><span class="item-price">RM10</span></div><div class="item-desc">Juicy beef patty, lettuce, pickles & Zesty Sauce.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Beef & Cheese Burger</span><span class="item-price">RM11</span></div><div class="item-desc">Beef patty + melted cheddar & Zesty Sauce.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Beef & Mushroom Burger</span><span class="item-price">RM13</span></div><div class="item-desc">With sautéed mushrooms, cheese & Zesty Sauce.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Loaded Beef Burger</span><span class="item-price">RM15</span></div><div class="item-desc">Bacon, egg, cheese & Zesty Sauce stack.</div></div>
 
-  <div class="item"><span class="item-name">Beef Burger</span><span class="item-price">RM10</span>
-    <div class="item-desc">Juicy 140gm beef patty with lettuce, pickles & Zesty Sauce.</div>
-  </div>
-  <div class="item"><span class="item-name">Beef & Cheese Burger</span><span class="item-price">RM11</span>
-    <div class="item-desc">Beef patty with melted cheddar & Zesty Sauce.</div>
-  </div>
+<h2>🍗 Chicken Series</h2>
+<div class="tagline">Crispy chicken thigh goodness with house cream.</div>
+<div class="item"><div class="item-header"><span class="item-name">Original Crispy</span><span class="item-price">RM8</span></div><div class="item-desc">Let us hit it with lettuce & House Cream.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Cheesy Crispy</span><span class="item-price">RM9</span></div><div class="item-desc">Fried chicken with melted cheese & cream.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Crispy Mushroom Chicken</span><span class="item-price">RM11</span></div><div class="item-desc">With mushrooms, cheese & House Cream.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Loaded Crispy Chicken</span><span class="item-price">RM13</span></div><div class="item-desc">Bacon, cheese & House Cream stack.</div></div>
 
-  <!-- ORDER BUTTON -->
-  <div class="order-wrap">
-    <a id="orderBtn" href="https://abgspekfoodie.github.io/Snapbite-Order/" class="order-btn">ORDER NOW</a>
-    <div class="emoji-run" id="emojiRun">
-      <span>🍔</span><span>🌮</span><span>🌭</span>
-    </div>
-  </div>
+<h2>🌮 Tex‑Mex Series</h2>
+<div class="tagline">Soft 1pc or hard 2pcs tacos + quesadillas.</div>
+<div class="item"><div class="item-header"><span class="item-name">Beef Taco</span><span class="item-price">RM10</span></div><div class="item-desc">Beef, fresh veggies, your shell choice.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Chicken Taco</span><span class="item-price">RM9</span></div><div class="item-desc">Juicy chicken & veggies in taco shell.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Mix Taco</span><span class="item-price">RM12</span></div><div class="item-desc">Half beef half chicken, fresh toppings.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Beef Quesadilla</span><span class="item-price">RM16</span></div><div class="item-desc">Beef & mozzarella in grilled tortilla.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Chicken Quesadilla</span><span class="item-price">RM15</span></div><div class="item-desc">Chicken & cheese, grilled to perfection.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Mix Quesadilla</span><span class="item-price">RM17</span></div><div class="item-desc">Half & half meat, cheesy tortilla.</div></div>
 
-  <!-- OVERLAY LOADER -->
-  <div class="overlay-dim" id="overlayDim">
-    <div class="loader-emoji">
-      <span>🌮</span>
-      <span>🍔</span>
-      <span>🌭</span>
-    </div>
-    <div class="text">Redirecting to order page…</div>
-  </div>
+<h2>🍝 Pasta Series</h2>
+<div class="tagline">Comfort bowls for every craving.</div>
+<div class="item"><div class="item-header"><span class="item-name">Mac & Cheese</span><span class="item-price">RM8</span></div><div class="item-desc">Creamy mac & cheese with bacon or popcorn chicken.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Creamy Truffle Pasta</span><span class="item-price">RM8</span></div><div class="item-desc">Silky truffle cream pasta with garlic hint.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Beef Bolognese</span><span class="item-price">RM8</span></div><div class="item-desc">Classic tomato beef pasta.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Creamy Chicken Pasta</span><span class="item-price">RM8</span></div><div class="item-desc">White sauce pasta with popcorn chicken.</div></div>
 
-  <script>
-    document.getElementById("orderBtn").addEventListener("click", function(e) {
-      e.preventDefault();
-      const emojiRun = document.getElementById("emojiRun");
-      const overlay = document.getElementById("overlayDim");
+<h2>🍟 Snack Series</h2>
+<div class="tagline">Hot & shareable treats.</div>
+<div class="item"><div class="item-header"><span class="item-name">Cheesy Fries</span><span class="item-price">RM5</span></div><div class="item-desc">Golden fries + creamy cheese sauce.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Popcorn Chicken</span><span class="item-price">RM6</span></div><div class="item-desc">Crispy bite-sized chicken pieces.</div></div>
+<div class="item"><div class="item-header"><span class="item-name">Loaded Fries</span><span class="item-price">RM8</span></div><div class="item-desc">Fries topped with beef & melted cheese.</div></div>
 
-      emojiRun.classList.add("active");
-      overlay.classList.add("show");
+<div class="order-wrap">
+  <a id="orderBtn" href="https://abgspekfoodie.github.io/Snapbite-Order/" class="order-btn">ORDER NOW</a>
+  <div class="emoji-run" id="emojiRun"><span>🍔</span><span>🌮</span><span>🌭</span></div>
+</div>
 
-      setTimeout(() => {
-        window.location.href = this.href;
-      }, 2000);
-    });
-  </script>
+<audio id="sizzleSound" preload="auto"><source src="https://cdn.pixabay.com/audio/2021/08/04/audio_149a440e4d.mp3" type="audio/mpeg"></audio>
+
+<div class="overlay-dim" id="overlayDim">
+  <div class="loader-emoji"><span>🌮</span><span>🍔</span><span>🌭</span></div>
+  <div class="text">Redirecting to order page…</div>
+</div>
+
+<script>
+document.getElementById("orderBtn").addEventListener("click", function(e) {
+  e.preventDefault();
+  const emojiRun = document.getElementById("emojiRun");
+  const overlay = document.getElementById("overlayDim");
+  const sizzle = document.getElementById("sizzleSound");
+  emojiRun.classList.add("active");
+  overlay.classList.add("show");
+  sizzle.play();
+  setTimeout(() => {
+    window.location.href = this.href;
+  }, 2000);
+});
+</script>
 
 </body>
 </html>
